# qdb-pkg-windows

./: .gitattributes  .gitignore  CMakeLists.txt  FindInnoSetup.cmake  FindSignTool.cmake  README.md  license.txt  pack.bat  qdb-odbc-driver.iss  qdb-server-32.iss  qdb-server-64.iss  qdb-server.iss  readme.txt  teamcity.bat
scripts/release/: set_version.sh
scripts/teamcity/: build.sh  build_installer.ps1
